--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
     <body>
-     <h1>Keseimbangan dalam Semesta</h1>
+     <h1>Eksistensi Keseimbangan dalam Semesta</h1>
      <h3>Oleh : Zaafirrahman</h3>
      <img src="eks.jpeg" width="550" height="300" alt="Keseimbangan"/>
      <p>Sudah berjuta-juta tahun lamanya bumi menjadi tempat tinggal berbagai makhluk hidup maupun benda mati yang ada di dalamnya. 
