--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Zaafirrahman</title>
+  </head>
     <body>
      <h1>Eksistensi Keseimbangan dalam Semesta</h1>
      <h3>Oleh : Zaafirrahman</h3>
