--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Zaafirrahman</title>
+    <title>Selamat datang di website Zaafirrahman</title>
   </head>
     <body>
      <h1>Eksistensi Keseimbangan dalam Semesta</h1>
