--- a/index.html
+++ b/index.html
@@ -1,100 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Selamat datang di website Zaafirrahman</title>
-  </head>
-    <body>
-     <h1>Eksistensi Keseimbangan dalam Semesta</h1>
-     <h3>Oleh : Zaafirrahman</h3>
-     <img src="eks.jpeg" width="550" height="300" alt="Keseimbangan"/>
-     <p>Sudah berjuta-juta tahun lamanya bumi menjadi tempat tinggal berbagai makhluk hidup maupun benda mati yang ada di dalamnya. 
-         Telah banyak zaman yang telah ia lewati dengan kurun waktu yang sangat panjang, mulai dari zaman batu hingga zaman serba jitu.</p>
-     <p>Seiring berjalannya waktu, setiap zaman selalu diikuti dengan berbagai peristiwa alam seperti perubahan iklim, bencana alam, 
-         dan berbagai peristiwa alam lainnya.Namun, pernahkah kita bertanya mengapa peristiwa alam tersebut terus terjadi dari dulu hingga 
-         sekarang?</p>
-     <p>Jika kita perhatikan dengan saksama, berbagai peristiwa alam tersebut terjadi disebabkan oleh penyesuaian diri dari berbagai proses 
-         alam yang berkesinambungan.</p>
-     <p>Ada banyak cara alam semesta ini menyesuaikan diri dengan berbagai peristiwa yang terjadi di dalamnya. Salah satu contohnya ialah 
-         letusan gunung api yang terjadi akibat adanya endapan magma di dalam perut bumi yang didorong keluar oleh gas yang bertekanan 
-         tinggi. Secara tidak langsung, bencana tersebut merupakan upaya penyesuaian antara magma dengan perut bumi sehingga menghasilkan 
-         peristiwa letusan gunung yang apabila letusan tersebut tidak terjadi, maka akan berdampak pada hal yang jauh lebih berbahaya dari 
-         yang kita duga. Hal tersebut merupakan salah satu upaya alam semesta dalam mencapai keseimbangan.</p>
-     <img src="nbc.jpeg" width="550" height="300" alt="Gunung Berapi"/>
-     <p>Begitu pula dengan berbagai upaya lainnya yang terjadi di dunia ini untuk mencapai keseimbangan sesuai dengan kodratnya masing-masing. 
-         Sebab jika kita perhatikan lebih luas, sebenarnya bukan hanya alam saja yang selalu melakukan penyesuaian terhadap berbagai peristiwa 
-         yang terjadi, akan tetapi segala hal di dunia ini pun butuh penyesuaian terhadap berbagai peristiwa yang terjadi pada perannya 
-         masing-masing yang tak lain dan tak bukan ialah untuk mencapai dan menjaga keseimbangan antara hubungannya dengan berbagai unsur 
-         lainnya, mulai dari lingkup molekul hingga biosfer sekalipun.</p>
-         <p><i>“Yang telah menciptakan tujuh langit berlapis-lapis. Kamu sekali-kali tidak melihat pada ciptaan Tuhan Yang Maha Pemurah 
-             sesuatu yang tidak seimbang. Maka lihatlah berulang-ulang, adakah kamu lihat sesuatu yang tidak seimbang? Kemudian pandanglah 
-             sekali lagi niscaya penglihatanmu akan kembali kepadamu dengan tidak menemukan sesuatu cacat dan penglihatanmu itupun dalam 
-         keadaan payah.”</i> (Q.S. Al-Mulk : 3–4)</p>
-         <p>Tuhan sudah mengatur sedemikian rupa semua makhluk ciptaan-Nya dengan berbagai upayanya dalam menggapai keseimbangan. 
-             Tak luput walau unsur terkecil sekalipun. Sebuah karunia dengan konsep yang amat sangat sederhana namun sangat dibutuhkan untuk 
-             menjaga kelangsungan dari berbagai kehidupan di dunia ini. Manakala terdapat suatu kerusakan pada sistem tersebut, maka akan 
-             menimbulkan dampak negatif terhadap keseimbangan dari kasus yang terkait, baik secara langsung maupun tidak langsung.</p>
-     <p>Namun, ketidakseimbangan yang diakibatkan oleh kerusakan tersebut masih dapat diatasi oleh alam dengan sendirinya tergantung 
-         pada tingkat kerusakan yang berdampak pada keseimbangan tersebut, seperti yang disebutkan dalam hukum homeostasis atau yang 
-         biasa dikenal dengan hukum kelentingan.</p>
-     <p>Homeostasis merupakan proses atau mekanisme yang dilakukan alam semesta dan seisinya secara otomatis dalam mempertahankan kondisi 
-         konstan agar tetap dalam keadaan normal atau seimbang meski terjadi perubahan pada lingkungan di dalam atau luarnya dengan batasan 
-         tertentu. Yang mana jika perubahan tersebut melewati batasnya, maka akan sangat sulit dalam memulihkan keseimbangannya kembali.</p>
-     <p>Maka dari itu diperlukan upaya dalam menjaga eksistensi keseimbangan agar keberlangsungan proses kehidupan di alam semesta ini 
-         tetap terjaga dengan baik.</p>
-     <p>Seperti halnya beberapa contoh sederhana akan pentingnya eksistensi keseimbangan dalam berbagai kasus berikut:</p>
-     <ul>
-         <li>Sistem peredaran darah dalam tubuh yang harus dijaga keseimbangan antara kecepatan arus dan viskositas pada aliran darahnya 
-             dengan mengatur pola hidup sehat agar tidak terjadi gangguan berupa hipertensi ataupun hipotensi.</li>
-         <li>Keberlangsungan hidup tumbuh-tumbuhan di mana mereka harus menyeimbangkan antara pendapatan asupan air dengan proses 
-             penguapan agar kebutuhan untuk keberlangsungan hidupnya dapat dipertahankan.</li>
-         <li>Kebutuhan jiwa raga yang harus dijaga keseimbangan antara asupan akal, jasmani, dan rohani agar tidak terjadi ketimpangan 
-             di antaranya sehingga kesejahteraan diri dapat tercapai.</li>
-         <li>Keberlangsungan suatu sistem pendidikan yang baik dengan memerhatikan keseimbangan dalam memberikan pelajaran, hukuman, 
-             dan apresiasi dalam mendidik para pelajar sesuai dengan karakter, perilaku, dan sikap tiap pelajar agar terbentuk generasi 
-             penerus bangsa yang berkualitas.</li>
-         <li>Hubungan suatu pasangan di mana tiap individu harus menjaga keseimbangan dalam melakoni peran utamanya terhadap hubungan 
-             tersebut sesuai dengan caranya masing-masing sehingga dapat saling melengkapi satu sama lain.</li>
-     </ul>
-     <p>Serta masih banyak lagi contoh penerapan kesimbangan dalam luasnya alam semesta dan kehidupan yang kita jalani ini, baik yang 
-         terjadi dengan campur tangan makhluk maupun yang terjadi dengan sendirinya sesuai dengan kodratnya yang telah ditetapkan oleh 
-         Sang Pencipta Alam.</p>
-         <p>Sama halnya dengan berbagai bencana yang kian banyak menerpa bumi kita ini. Seperti yang kita ketahui sebelumnya, bahwa berbagai 
-             peristiwa alam yang terjadi di dunia ini (khususnya bencana alam) bertujuan untuk menyesuaikan terhadap berbagai peristiwa lain 
-             agar tercapai keseimbangan di antaranya. Namun jika kita perhatikan dalam sudut pandang lain, peristiwa tersebut terjadi bukan 
-             hanya untuk menggapai keseimbangan secara natural.</p>
-     <img src="nami.jpeg" width="550" height="300" alt="Tsunami"/>
-     <p>Lalu, apa lagi penyebab terjadinya bencana tersebut? Mari kita perhatikan secarik lirik yang tersurat dalam syair musisi kita, Ebiet G Ade, 
-         yang berbunyi:</p>
-         <i>“Barangkali di sana ada jawabnya</i><br>
-         <i>Mengapa di tanahku terjadi bencana</i><br>
-         <i>Mungkin Tuhan mulai bosan melihat tingkah kita</i><br>
-         <i>Yang selalu salah dan bangga dengan dosa-dosa</i><br>
-         <i>Atau alam mulai enggan bersahabat dengan kita</i><br>
-         <i>Coba kita bertanya pada rumput yang bergoyang”</i>
-         <p>Yap, seperti lirik dalam lagu berjudul “Berita kepada Kawan” di atas, bencana yang kian banyak menerpa bumi kita ini tidak semata-mata 
-             hanya bertujuan untuk mencapai keseimbangan alam secara natural, akan tetapi juga merupakan cara Tuhan untuk memberi peringatan kepada 
-             hamba-hamba-Nya akan kelalaian yang telah kita perbuat.</p>
-         <p>Sebab kita sebagai manusia telah diberikan amanah yang sangat besar oleh Tuhan, yaitu agar menjadi pemimpin di muka bumi ini. 
-             Sebagai peran utama dalam perputaran roda kehidupan di atas bumi. Sebagai makhluk yang diberikan karunia berupa akal.</p>
-         <p>Namun telah banyak kerusakan yang kita lakukan di atas muka bumi ini. Telah banyak keseimbangan yang kita rusak sehingga keberlangsungan 
-             akan kehidupan di atas muka bumi kian terancam. Hanya karena keserakahan duniawi yang membutakan. Bahkan terhadap amanah yang diberikan 
-             saja kita lalai dalam menjaganya.</p>
-         <img src="uang.jpeg" width="550" height="600" alt="Keserakahan"/>
-     <p>Maka dari itu diturunkanlah azab berupa bencana di atas muka bumi ini. Untuk memberikan peringatan kepada manusia dengan tujuan agar manusia 
-         sadar akan perbuatan yang telah dilakukan selama ini, akan kelalaian terhadap amanah yang telah diberikan. Juga untuk memulihkan kembali 
-         keseimbangan di atas muka bumi yang telah rusak akibat perbuatan manusia.</p>
-     <p>Dengan begitu kita harus benar-benar sadar akan pentingnya peran kita dalam menjalani kehidupan di dunia ini. Tinggal memilih apakah kita 
-         akan menjaga selalu amanah yang dititipkan oleh Tuhan, atau mengabaikannya bahkan mengkhianati amanah yang telah dititipkan oleh-Nya. 
-         Sebab apapun perbuatan yang kita lakukan di dunia ini, dampaknya akan kembali kepada kita sendiri.</p>
-     <p>Jika kita tetap menjaga keseimbangan di alam semesta ini dengan baik, maka keberlangsungan kehidupan dalam semesta ini akan berjalan dengan 
-         baik pula. Namun jika kita tidak menjaganya dengan baik, bahkan merusaknya atas dasar nafsu duniawi, maka tunggulah saatnya di mana 
-         ketidakseimbangan alam semesta akan melampaui batas kelentingannya, sehingga ketika sampai pada puncak kehancurannya, maka akan sangat 
-         sulit bagi kita dalam mengendalikannya bahkan memulihkan keseimbangannya kembali.</p>
-     <p>Namun, akan sangat mudah bagi Tuhan dalam memerintahkan alam semesta untuk ‘memulihkan’ serta mengembalikan keseimbangan yang ada di dalamnya 
-         dengan cara apapun agar alam semesta kembali membaik. Tentunya dengan ‘pemulihan’ besar-besaran seperti kondisi yang kita rasakan saat ini.</p>
-     <p>Pada akhirnya, berbagai aspek kehidupan di dunia ini takkan pernah luput dari penyesuaian untuk mencapai keseimbangan dengan tujuan menghindari 
-         hal yang lebih buruk dan menuju kepada hal yang lebih baik.</p>
-         
-     <a href="zaafirrahman.medium.com">Follow my Medium to get more of my stories</a>
-  </body>
+
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+	<!-- Include JS files -->
+	<script src="script.js"></script>
+</head>
+
+<body>
+	<div class="container">
+		<h1>Food Heat Specific</h1>
+		<h1>Calculator (J/KgK)</h1>
+
+		<p>Fat Percentage</p>
+
+		<input type="text" id="fat">
+
+		<p>Solid Non Fat Percentage</p>
+
+		<input type="text" id="solidnonfat">
+
+                <p>Moisture Percentage</p>
+
+		<input type="text" id="moisture">
+
+		<button id="btn">Calculate</button>
+
+		<div id="result"></div>
+	</div>
+</body>
+
 </html>
