--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Food Entalpy Calculator
 </title>
 <style type="text/css">
 html{
-    background: linear-gradient(to right bottom, #FF6600, #FF9900);
+    background: linear-gradient(to right bottom, #000000, #FF9900);
   font-family: 'Lato', sans-serif;
     color: white;
     padding:30px;
