--- a/index.html
+++ b/index.html
@@ -302,22 +302,22 @@ span {
           <ul>
             <li>
               <p class="tags">
-                Al-Fityan School Medan<br /><span
+                <a href="https://alfityanmedan.sch.id/" target="_blank">Al-Fityan School Medan</a><br /><span
                   >Elementary School | <span>2008 - 2014</span></span
                 >
               </p>
               <p class="tags">
-		Nurul Fikri Boarding School Serang<br /><span
+		<a href="https://nfbs.or.id/" target="_blank">Nurul Fikri Boarding School Serang</a><br /><span
                   >Junior High School | <span>2014 - 2017</span></span
                 >
               </p>
               <p class="tags">
-		Nurul Fikri Boarding School Serang<br /><span
+		<a href="https://nfbs.or.id/" target="_blank">Nurul Fikri Boarding School Serang</a><br /><span
                   >Senior High School | <span>2017 - 2020</span></span
                 >
               </p>
               <p class="tags">
-		Brawijaya University Malang<br /><span
+		<a href="https://tip.ub.ac.id/en/" target="_blank">Brawijaya University Malang</a><br /><span
                   >College | <span>2020 - now</span></span
                 >
               </p>
@@ -329,28 +329,60 @@ span {
         <div class="card">
           <p>
             <i class="fas fa-trophy stroke-transparent"></i
-            >&nbsp;&nbsp;&nbsp;Achievement
+            >&nbsp;&nbsp;&nbsp;Achievements
           </p>
           <ul id="listExperience">
             <li>
               <p class="tags">
-                1st Place in Kompetisi Sains Madrasah, General Biology Olympiad<br /><span
+                <a href="https://drive.google.com/file/d/1YpWdYfQN_aLb_HctX01zVRdvh9pzJ0hS/view?usp=sharing" target="_blank">1st Place in Kompetisi Sains Madrasah, Integrated Biology Olympiad</a><br /><span
                   >Serang District | <span>2019</span></span
                 >
               </p>
               <p class="tags">
-                3rd Place in Jakarta Pencak Silat Championship, Sparing Competition <br /><span
+                <a href="https://drive.google.com/file/d/1xj3lBsyo26v5SO21rwNwXfbwAoxV7yuh/view?usp=sharing" target="_blank">3rd Place in Jakarta Pencak Silat Championship, Sparing Competition</a><br /><span
                   >Indonesia | <span>2019</span></span
                 >
               </p>
               <p class="tags">
-                1st Place in PORSIQU JSIT, Basketball Competition <br /><span
+                <a href="https://drive.google.com/file/d/1P76gBuR7HKLz2As93rX1FOHszj_0nggx/view?usp=sharing" target="_blank">1st Place in PORSIQU JSIT, Basketball Competition</a><br /><span
                   >Banten Province | <span>2018</span></span
                 >
               </p>
               <p class="tags">
-                1st Place in NF Expo and Science Fair, Scientific Journal Competition <br /><span
+                <a href="https://drive.google.com/file/d/1gWTfBEq5VqJ1QbB6DnMpLqkxnqFHzFe8/view?usp=sharing" target="_blank">1st Place in NF Expo and Science Fair, Scientific Journal Competition</a><br /><span
                   >Nurul Fikri Serang | <span>2017</span></span
+                >
+              </p>
+            </li>
+          </ul>
+        </div>
+
+        <!-- =========== CARD PROJECT =========== -->
+        <div class="card">
+          <p>
+            <i class="fas fa-file stroke-transparent"></i
+            >&nbsp;&nbsp;&nbsp;Projects
+          </p>
+          <ul id="listExperience">
+            <li>
+              <p class="tags">
+                <a href="https://colab.research.google.com/drive/17X53s4EHCjwvyt5tGhK8t_UrA0LCxCL_?usp=sharing" target="_blank">Internal Rate of Return Identifier</a><br /><span
+                  >Python Programming Language | <span></span>2021</span
+                >
+              </p>
+              <p class="tags">
+                <a href="https://colab.research.google.com/drive/1mbneRU4zVJbcUnwAQmcyFRh-aL_kzNxF?usp=sharing" target="_blank">Investment Depreciation Operator</a><br /><span
+                  >Python Programming Language | <span></span>2021</span
+                >
+              </p>
+              <p class="tags">
+                <a href="https://colab.research.google.com/drive/1iKNG7YdR3cOyP-lKoOOWZdkMgh-Vc8IH?usp=sharing" target="_blank">Food Heat Specific Calculator</a><br /><span
+                  >Python Programming Language | <span></span>2021</span
+                >
+              </p>
+              <p class="tags">
+                <a href="https://colab.research.google.com/drive/1R9GsoIU4gU2bNa_5V4olZl23Ueo7gFyz?usp=sharing" target="_blank">Bacteria Growth Rate Projector</a><br /><span
+                  >Python Programming Language | <span></span>2021</span
                 >
               </p>
             </li>
