--- a/index.html
+++ b/index.html
@@ -367,22 +367,27 @@ span {
             <li>
               <p class="tags">
                 <a href="https://colab.research.google.com/drive/17X53s4EHCjwvyt5tGhK8t_UrA0LCxCL_?usp=sharing" target="_blank">Internal Rate of Return Identifier</a><br /><span
-                  >Python Programming Language | <span></span>2021</span
+                  >Python | <span></span>2021</span
                 >
               </p>
               <p class="tags">
                 <a href="https://colab.research.google.com/drive/1mbneRU4zVJbcUnwAQmcyFRh-aL_kzNxF?usp=sharing" target="_blank">Investment Depreciation Operator</a><br /><span
-                  >Python Programming Language | <span></span>2021</span
+                  >Python | <span></span>2021</span
                 >
               </p>
               <p class="tags">
                 <a href="https://colab.research.google.com/drive/1iKNG7YdR3cOyP-lKoOOWZdkMgh-Vc8IH?usp=sharing" target="_blank">Food Heat Specific Calculator</a><br /><span
-                  >Python Programming Language | <span></span>2021</span
+                  >Python | <span></span>2021</span
                 >
               </p>
               <p class="tags">
                 <a href="https://colab.research.google.com/drive/1R9GsoIU4gU2bNa_5V4olZl23Ueo7gFyz?usp=sharing" target="_blank">Bacteria Growth Rate Projector</a><br /><span
-                  >Python Programming Language | <span></span>2021</span
+                  >Python | <span></span>2021</span
+                >
+              </p>
+              <p class="tags">
+                <a href="https://colab.research.google.com/drive/1J4CawIMZZZveY5e_ikXtgU-H2tehjNtA?usp=sharing" target="_blank">Compound Interest Module Package</a><br /><span
+                  >Python | <span></span>2021</span
                 >
               </p>
             </li>
