--- a/index.html
+++ b/index.html
@@ -394,6 +394,23 @@ span {
           </ul>
         </div>
 
+        <!-- =========== CARD SCI-WORK =========== -->
+        <div class="card">
+          <p>
+            <i class="fas fa-flask stroke-transparent"></i
+            >&nbsp;&nbsp;&nbsp;Scientific Work
+          </p>
+          <ul id="listExperience">
+            <li>
+              <p class="tags">
+                <a href="https://drive.google.com/file/d/1ZSZhUD9UIdI4vPAFfZV0F-KtJJcyL8LB/view?usp=sharing" target="_blank">Penghitung Rerata Waktu dan Intensitas Repetisi Gerakan Penuh pada Olahraga Pull-Up</a><br /><span
+                  >Electro & Arduino | <span></span>2018</span
+                >
+              </p>
+            </li>
+          </ul>
+        </div>
+
     <!-- =========== SCRIPT JS =========== -->
 <script>
 let listExperience = document.querySelector("#listExperience");
