--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@ span {
           </p>
           <ul id="listExperience">
             <li>
+	      <p class="tags">
+                <a href="https://pypi.org/project/compoundinterest/" target="_blank">Module of Compound Interest Factors</a><br /><span
+                  >Python | <span></span>2021</span
+                >
+              </p>
               <p class="tags">
                 <a href="https://colab.research.google.com/drive/17X53s4EHCjwvyt5tGhK8t_UrA0LCxCL_?usp=sharing" target="_blank">Internal Rate of Return Identifier</a><br /><span
                   >Python | <span></span>2021</span
@@ -382,11 +387,6 @@ span {
               </p>
               <p class="tags">
                 <a href="https://colab.research.google.com/drive/1R9GsoIU4gU2bNa_5V4olZl23Ueo7gFyz?usp=sharing" target="_blank">Bacteria Growth Rate Projector</a><br /><span
-                  >Python | <span></span>2021</span
-                >
-              </p>
-              <p class="tags">
-                <a href="https://colab.research.google.com/drive/1J4CawIMZZZveY5e_ikXtgU-H2tehjNtA?usp=sharing" target="_blank">Compound Interest Module Package</a><br /><span
                   >Python | <span></span>2021</span
                 >
               </p>
