--- a/index.html
+++ b/index.html
@@ -385,6 +385,11 @@ span {
                   >Python | <span></span>2021</span
                 >
               </p>
+	      <p class="tags">
+                <a href="https://colab.research.google.com/drive/1gPfLk6y6STXzGzror3JyBARIPMWQ2zio?usp=sharing" target="_blank">Individual Incentive Planner</a><br /><span
+                  >Python | <span></span>2021</span
+                >
+              </p>
             </li>
           </ul>
         </div>
