--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ span {
             >Agroindustrial Engineering</strong
           >
         </p>
-        <p id="telephone">Phone & WhatsApp<br /><strong>+081584824947</strong></p>
+        <p id="telephone">Phone & WhatsApp<br /><strong>+62 81584824947</strong></p>
       </div>
 
       <!-- =========== CARD =========== -->
